added some sample content and tweaked fonts

--- a/source/less/includes/colors.less
+++ b/source/less/includes/colors.less
@@ -4,4 +4,7 @@
 @brown: #7A6A53;
 @lightBlue: #99B2B7;
 @darkBlue: darken(#99B2B7, 30%);
+@ltbBlue: #3987AD;
+@darkLtbBlue: darken(#3987AD, 20%);
+@ltbBlue2: #2d5f8c;
 
