--- a/source/less/main.less
+++ b/source/less/main.less
@@ -1,16 +1,24 @@
 @import "includes/colors.less";
 
-@import url("//fonts.googleapis.com/css?family=Open+Sans:400,300,700,600");
+@import url("//fonts.googleapis.com/css?family=Lato:100,300,400,700");
 
 body, h1, h2, h3, h4, h5, h6 {
-    font-family: 'Open Sans', sans-serif !important;
+    // font-family: 'Open Sans', sans-serif !important;
+    font-family: 'Lato', sans-serif !important;
 }
 
 
 header {
-    background-color: @brown;
-    background-color: @lightBlue;
-    background-color: @darkBlue;
+    // background-color: @brown;
+    // background-color: @lightBlue;
+    // background-color: @darkBlue;
+    // background-color: @lightGrey;
+    // background-color: darken(@lightGrey, 60%);
+    // background-color: darken(@softBrown, 0%);
+    // background-color: darken(@softBrown, 20%);
+    // background-color: @darkLtbBlue;
+    background-color: @ltbBlue2;
+    border-bottom: 1px solid @darkLtbBlue;
     height: 300px;
 
     padding-top: 48px;
@@ -20,8 +28,33 @@ header {
         font-weight: 300;
     }
     h1 {
-        margin-top: 20px;
-        font-weight: 600;
+        margin-top: 14px;
+        font-size: 4rem;
     }
 }
 
+.main-body {
+    margin-bottom: 92px;
+}
+
+
+.main-section {
+    margin-top: 84px;
+    p {
+        font-weight: 300;
+        font-size: 1.1rem;
+
+    }
+
+    h3 {
+        font-weight: 300;
+        font-size: 2.7rem;
+        text-align: center;
+        margin-bottom: 24px;
+    }
+}
+
+.graph {
+    margin-bottom: 20px;
+    text-align: center;
+}
