--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url("//fonts.googleapis.com/css?family=Open+Sans:400,300,700,600");
+@import url("//fonts.googleapis.com/css?family=Lato:100,300,400,700");
 body,
 h1,
 h2,
@@ -6,12 +6,11 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Open Sans', sans-serif !important;
+  font-family: 'Lato', sans-serif !important;
 }
 header {
-  background-color: #7a6a53;
-  background-color: #99b2b7;
-  background-color: #4c666b;
+  background-color: #2d5f8c;
+  border-bottom: 1px solid #204b60;
   height: 300px;
   padding-top: 48px;
 }
@@ -21,6 +20,26 @@ header h2 {
   font-weight: 300;
 }
 header h1 {
-  margin-top: 20px;
-  font-weight: 600;
+  margin-top: 14px;
+  font-size: 4rem;
+}
+.main-body {
+  margin-bottom: 92px;
+}
+.main-section {
+  margin-top: 84px;
+}
+.main-section p {
+  font-weight: 300;
+  font-size: 1.1rem;
+}
+.main-section h3 {
+  font-weight: 300;
+  font-size: 2.7rem;
+  text-align: center;
+  margin-bottom: 24px;
+}
+.graph {
+  margin-bottom: 20px;
+  text-align: center;
 }
