--- a/source/less/main.less
+++ b/source/less/main.less
@@ -39,7 +39,6 @@ header {
 
 
 .main-section {
-    margin-top: 84px;
     p {
         font-weight: 300;
         font-size: 1.1rem;
@@ -54,7 +53,19 @@ header {
     }
 }
 
+.main-section {
+    padding-top: 84px;
+    padding-bottom: 84px;
+    // background-image: linear-gradient(180deg, #fff 0, #f9f9f9 100%);
+
+}
+
 .graph {
     margin-bottom: 20px;
     text-align: center;
 }
+
+.spacer1 { height: 16px; }
+.spacer2 { height: 32px; }
+.spacer3 { height: 48px; }
+.spacer4 { height: 64px; }
