--- a/source/less/main.less
+++ b/source/less/main.less
@@ -65,6 +65,30 @@ header {
     text-align: center;
 }
 
+.disbursement-table {
+    font-size: 0.9rem;
+}
+
+footer {
+    padding-top: 48px;
+    padding-bottom: 24px;
+    background-color: #222;
+
+    font-weight: 200;
+
+    * {
+        color: white;
+    }
+
+    a {
+        font-size: 0.9rem;
+        color: white;
+    }
+    a:hover {
+        color: #ccc !important;
+    }
+}
+
 .spacer1 { height: 16px; }
 .spacer2 { height: 32px; }
 .spacer3 { height: 48px; }
